manifest/demoteam/app-with-secrets/acc/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-with-secrets
    env: acc
    team: demoteam
  name: app-with-secrets
spec:
  template:
    metadata:
      annotations:
        fnatt.io/inject-ca-bundle: enabled
        fnatt.io/inject-ca-env: enabled
      labels:
        team: demoteam
        app: app-with-secrets
        env: acc
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
      - image: polarisit/secrets:0.3.12
        livenessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
        resources:
          requests:
            cpu: '0.5'
            memory: 512Mi
          limits:
            cpu: '1'
            memory: 1Gi
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        name: main
        readinessProbe:
          periodSeconds: 3
          initialDelaySeconds: 10
          httpGet:
            path: /health/status
            port: 8080
  selector:
    matchLabels:
      team: demoteam
      app: app-with-secrets
      env: acc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: app-with-secrets
    env: acc
    team: demoteam
  name: app-with-secrets
spec:
  ingressClassName: ingress-nginx-pm
  rules:
  - host: app-with-secrets.acc.fnatt.no
    http:
      paths:
      - path: /
        backend:
          service:
            port:
              number: 80
            name: app-with-secrets
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app-with-secrets
    env: acc
    team: demoteam
  name: app-with-secrets
spec:
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
  selector:
    app: app-with-secrets
    env: acc
    team: demoteam
